Projects image error solved

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </dialog>
         <!-- -------3---- -->
         <dialog id="dialog3">
-            <div class="dialog_img_container"><img src="./2s.png" alt=""></div>
+            <div class="dialog_img_container"><img src="./3s.png" alt="img"></div>
 
             <h2>File Manager</h2>
             <p>"Introducing a powerful and versatile file manager built with Flutter, leveraging the ""get"" and ""get""
@@ -172,7 +172,7 @@
         </dialog>
         <!-- -------4---- -->
         <dialog id="dialog4">
-            <div class="dialog_img_container"><img src="./3s.png" alt="4"></div>
+            <div class="dialog_img_container"><img src="./2s.png" alt="4"></div>
 
             <h2>Spotify Clone</h2>
             <p>Introducing the ultimate "Spotify Clone" app, meticulously crafted with Flutter and powered by efficient
@@ -256,11 +256,12 @@
     <p class="footer_p"> Abhishek Kayal </p>
 
     <!-- js scripts-->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <script src="script.js"></script>
+
 </body>
 
 </html>
